# WHO

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Headers/Model/Factories/: BlockFactory.h  RecordFactory.h
src/Headers/Model/HashFile/: Hash.h  HashBlock.h  HashFile.h  OverFlowHeapFile.h  PrimaryHeapFile.h
src/Headers/Model/HeapFile/: Block.h  HeapFile.h
src/Headers/Model/HeapFile/Helpers/: BinaryString.h  ByteConverter.h
src/Headers/Model/Interfaces/: IComparable.h  IRecord.h  IStorable.h
src/Headers/Model/PCRDatabase/: Database.h  DiskDatabase.h  RamDatabase.h
src/Headers/Model/PCRDatabase/Generator/: RandomDataGenerator.h
src/Headers/Model/PCRDatabase/ModelWrappers/: LocationWrapper.h  PersonHashWrapper.h  PersonWrapper.h  TestByDateWrapper.h  TestHashWrapper.h  TestInDistrictWrapper.h  TestInRegionWrapper.h  TestWrapper.h
src/Headers/Model/PCRDatabase/Models/: PCRTest.h  Person.h  ReducedPCRTest.h
src/Headers/Model/Structures/AVL/: AVLNode.h  AVLTree.h
src/Headers/Model/Structures/BST/: BSTNode.h  BinarySearchTree.h
src/Headers/Model/Tests/: FileTester.h  FunctionalityTester.h  HashFileTester.h  SpeedTester.h
src/Headers/Model/Tests/TestObjects/: Number.h
src/Headers/Presenter/: DiskPresenter.h  Presenter.h  RamPresenter.h
src/Headers/Presenter/Commands/: ClearCommand.h  Command.h  EditPersonCommand.h  EditTestCommand.h  FileCommands.h  FindAllTestsByLocationIdCommand.h  FindAllTestsInDistrictCommand.h  FindPatientsTestsCommand.h  FindPersonCommand.h  FindPositiveTestsByLocationIdCommand.h  FindPositiveTestsInDistrictCommand.h  FindTestCommand.h  FindTestResultCommand.h  GenerateCommand.h  InsertCommand.h  PrintAllDataCommand.h  RemoveCommand.h  RemovePersonCommand.h  RemoveTestCommand.h
src/Headers/Presenter/Commands/Tests/: FunctionalityTestCommand.h  SpeedTestCommand.h
src/Headers/Presenter/Enums/: FileCommandType.h  Location.h  RemoveType.h
src/Headers/View/: Application.h
src/Headers/View/Helpers/: Operation.h
src/Headers/View/Models/: Person.h  Test.h
src/Headers/View/UI/: FileWindow.h  FunctionalityTestWindow.h  GeneratorWindow.h  OperationsWindow.h  OutputWindow.h  PersonWindow.h  ReducedOperationsWindow.h  SelectDatabase.h  SpeedTestWindow.h  TestWindow.h  Window.h
src/Source/Model/HeapFile/Helpers/: ByteConverter.cpp
src/Source/Model/PCRDatabase/: Database.cpp  DiskDatabase.cpp  RamDatabase.cpp
src/Source/Model/PCRDatabase/Generator/: RandomDataGenerator.cpp
src/Source/Model/PCRDatabase/ModelWrappers/: LocationWrapper.cpp  PersonHashWrapper.cpp  PersonWrapper.cpp  TestByDateWrapper.cpp  TestHashWrapper.cpp  TestInDistrictWrapper.cpp  TestInRegionWrapper.cpp  TestWrapper.cpp
src/Source/Model/PCRDatabase/Models/: PCRTest.cpp  Person.cpp  ReducedPCRTest.cpp
src/Source/Model/Tests/: FileTester.cpp  FunctionalityTester.cpp  HashFileTester.cpp  SpeedTester.cpp
src/Source/Model/Tests/TestObjects/: Number.cpp
src/Source/Presenter/: DiskPresenter.cpp  Presenter.cpp  RamPresenter.cpp
src/Source/Presenter/Commands/: ClearCommand.cpp  EditPersonCommand.cpp  EditTestCommand.cpp  FileCommands.cpp  FindAllTestsByLocationIdCommand.cpp  FindAllTestsInDistrictCommand.cpp  FindPatientsTestsCommand.cpp  FindPersonCommand.cpp  FindPositiveTestsByLocationIdCommand.cpp  FindPositiveTestsInDistrictCommand.cpp  FindTestCommand.cpp  FindTestResultCommand.cpp  GenerateCommand.cpp  InsertCommand.cpp  PrintAllDataCommand.cpp  RemoveCommand.cpp  RemovePersonCommand.cpp  RemoveTestCommand.cpp
src/Source/Presenter/Commands/Tests/: FunctionalityTestCommand.cpp  SpeedTestCommand.cpp
src/Source/View/: Application.cpp
src/Source/View/UI/: FileWindow.cpp  FunctionalityTestWindow.cpp  GeneratorWindow.cpp  OperationsWindow.cpp  OutputWindow.cpp  PersonWindow.cpp  ReducedOperationsWindow.cpp  SelectDatabase.cpp  SpeedTestWindow.cpp  TestWindow.cpp
